--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    
+    <h1>Заголовок</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, possimus laboriosam animi, facere facilis quae, reiciendis iure quibusdam labore ducimus ab dolorum neque nam voluptate natus. Maiores molestias laborum, laudantium!</p>
+    <p>Ab, mollitia, dicta. Porro officiis corporis illo eveniet. Nulla quidem, aut pariatur error consectetur incidunt esse amet a eos aliquid molestiae, nisi iusto, accusamus illo dolorem molestias repudiandae officiis nesciunt.</p>
+    <p>Dolor consequuntur accusantium quos nobis optio dolorum pariatur repellendus corrupti quidem numquam atque laudantium culpa blanditiis placeat fugit molestias maxime, animi, ipsam labore porro quaerat delectus quis doloribus vitae? Enim.</p>
+    <p>Error fuga tenetur eum officia quod repudiandae, atque porro temporibus id, vel nemo quos explicabo velit sit corporis cupiditate, recusandae voluptatem assumenda sint quibusdam eius. Obcaecati repellat quas velit ipsam?</p>
+    <p>Similique cumque consequatur cum eius distinctio nisi numquam molestias fugiat corrupti doloribus, eos et dignissimos, consectetur commodi quibusdam id ab laborum minus voluptatem itaque, esse harum ad, repellendus aperiam repudiandae.</p>
 </body>
 </html>
